@@ -7,6 +7,10 @@ SET LOG_DIR=%APP_DIR%\\logs
 if not exist "%DATA_DIR%" mkdir "%DATA_DIR%"
 if not exist "%LOG_DIR%" mkdir "%LOG_DIR%"
 
-javaw -D"spring.profiles.active"=prod -jar "%JAR%"
+javaw ^
+    -XX:+UseZGC ^
+    -Xmx4g ^
+    -D"spring.profiles.active"=prod ^
+    -jar "%JAR%"
 
 exit
